Canvas refactored, Abstract Table and components refactored